--- a/storage-schemas.conf
+++ b/storage-schemas.conf
@@ -1,14 +1,4 @@
 [stats]
-pattern = ^stats.*
-retentions = 10s:6h,1min:7d,10min:5ypriority = 110
+priority = 110
 pattern = .*
 retentions = 10:2160,60:10080,600:262974
-
-[carbon]
-pattern = ^carbon\.
-retentions = 60:90d
- 
-[default_1min_for_1day]
-pattern = .*
-retentions = 60s:1d
-
